--- a/src/pages/landing/sections/home/style.css
+++ b/src/pages/landing/sections/home/style.css
@@ -24,7 +24,7 @@
 
 #home .entry-title {
   position: absolute;
-  color: #f44647;
+  color: #0069d1;
   font-weight: 800;
   font-size: 140px;
   line-height: 143px;
