--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,12 +17,12 @@ body {
   min-width: 320px;
   position: relative;
   overflow-x: hidden;
-  background: linear-gradient(to right, #fff0f0 0%, #fff0f0 60%, white 60%);
+  background: linear-gradient(to right, #aacef2 0%, #aacef2 60%, white 60%);
   background-position: center;
 }
 @media (max-width: 1020px) {
   body {
-    background: #fff0f0;
+    background: #aacef2;
   }
 }
 
@@ -37,12 +37,12 @@ a {
 }
 
 a:hover {
-  color: #f44647;
+  color: #0069d1;
 }
 
 .section a {
   font-weight: 700;
-  color: #f44647;
+  color: #0069d1;
 }
 
 .section a:hover {
@@ -82,7 +82,7 @@ img.block-right {
 .page-wrapper {
   pointer-events: auto;
   width: 100%;
-  background-color: #fff0f0;
+  background-color: #aacef2;
   max-width: 800px;
 }
 
