--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -31,7 +31,7 @@
   left: 0;
   top: 0;
   position: absolute;
-  color: #f44647;
+  color: #0069d1;
 }
 
 .nav-count .pagination-sep {
@@ -49,7 +49,7 @@
 }
 
 .nav-list li a.current {
-  color: #f44647;
+  color: #0069d1;
 }
 
 .nav-list li ul {
@@ -104,7 +104,7 @@
 
 .nav-container .site-title:hover:before {
   width: 0;
-  background-color: #f44647;
+  background-color: #0069d1;
 }
 
 .nav-btn {
