--- a/src/pages/landing/sections/about/style.css
+++ b/src/pages/landing/sections/about/style.css
@@ -32,7 +32,7 @@ version 1.1
 }
 
 .about-info {
-  background-color: #f44647;
+  background-color: #0069d1;
   color: #fff;
   width: 330px;
   padding: 50px 30px 50px 70px;
