--- a/src/pages/landing/sections/services/style.css
+++ b/src/pages/landing/sections/services/style.css
@@ -33,7 +33,7 @@ version 1.1
 }
 
 .serv-link-cover {
-  background-color: #0069d1;
+  background-color: #3e3e3e;
   display: flex;
   align-items: center;
   padding: 50px 70px;
