--- a/src/pages/landing/sections/portfolio/items/style.css
+++ b/src/pages/landing/sections/portfolio/items/style.css
@@ -19,7 +19,7 @@
   width: 70px;
   height: 70px;
   display: inline-block;
-  background-color: #0069d1;
+  background-color: #3e3e3e;
   margin-bottom: 20px;
   background-size: 70px;
   /* transition: all 0.3s ease; */
@@ -72,7 +72,7 @@
   transition: background-color 0.3s ease;
 }
 .swiper-pagination-bullet-active {
-  background-color: #0069d1;
+  background-color: #3e3e3e;
 }
 
 p.block-right {
